--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 <p><img src="resources/images/phone.png"></p>
 <h4 class="header--sub-header">Coming Soon for iphone and Android</h4>
 <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
-
+<p><a class="footer--copyright">© Excursion</p>
 </body>
-    
 </html>
